--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "nanoid": "^3.1.25",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.21",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
